--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -77,5 +77,5 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        run: python -m twine upload dist/*
+        run: python -m twine upload --verbose dist/*
 
