--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
@@ -49,33 +48,25 @@ jobs:
         run: |
           pytest
 
-  publish:
-    runs-on: ubuntu-latest
-    needs: build
-
-    permissions:
-      contents: read
-      id-token: write  # Required for Trusted Publishers
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
         with:
-          python-version: "3.10"
-
-      - name: Install dependencies for building
-        run: |
-          python -m pip install --upgrade pip
-          pip install build twine
-
-      - name: Build the package
-        run: python -m build
-
-      - name: Publish package to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        run: python -m twine upload --verbose dist/*
+          name: dist
+          path: dist/
+  
+  pypi-publish:
+      name: Upload release to PyPI
+      runs-on: ubuntu-latest
+      needs: build
+      permissions:
+        contents: read
+        id-token: write  # Required for Trusted Publishers
+      steps:
+        - uses: actions/checkout@v3
+        - name: Download build artifacts
+          uses: actions/download-artifact@v3
+          with:
+            name: dist
+        - name: Publish package distributions to PyPI
+          uses: pypa/gh-action-pypi-publish@release/v1
 
