--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,7 +52,7 @@ jobs:
         run: python -m build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: dist
           path: dist/
@@ -63,13 +63,15 @@ jobs:
       needs: build
       permissions:
         contents: read
-        id-token: write  # Required for Trusted Publishers
+        id-token: write
       steps:
         - uses: actions/checkout@v3
         - name: Download build artifacts
-          uses: actions/download-artifact@v3
+          uses: actions/download-artifact@v4
           with:
             name: dist
+        - name: Debug downloaded artifacts
+          run: ls -l dist/
         - name: Publish package distributions to PyPI
           uses: pypa/gh-action-pypi-publish@release/v1
 
