--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -70,10 +70,16 @@ jobs:
           uses: actions/download-artifact@v4
           with:
             name: dist
+        - name: Debug downloaded artifact
+          run: |
+            echo "Workspace contents after download:"
+            ls -l
+            echo "Contents of dist directory:"
+            ls -l dist/
         - name: Unzip the dist.zip artifact
           run: |
             mkdir dist
-            unzip dist.zip -d dist
+            unzip '*.zip' -d dist
             ls -l dist/
         - name: Publish package distributions to PyPI
           uses: pypa/gh-action-pypi-publish@release/v1
